--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <main>
         <h1>Task Manager App Project</h1>
+
         <div class="features">
             <button class="add-btn">Add Task</button>
             <div name="select-task" class="search-container">
@@ -120,7 +121,7 @@
                             name="title" 
                             id="task"
                             required
-                            maxlength="100"
+                            maxlength="50"
                         >
                     </label>
 
@@ -148,11 +149,11 @@
                         <h4 class="color-picker__title">Custom Color</h4>
 
                         <div class="color-container">
-                            <span class="color" style="background-color: hsl(9, 100%, 64%);" data-name="orange" data-value="hsl(9, 100%, 86%)"></span>
-                            <span class="color" style="background-color: hsl(257, 79%, 64%);" data-name="purple" data-value="hsl(257, 79%, 86%)"></span>
-                            <span class="color" style="background-color: hsl(150, 45%, 54%);" data-name="green" data-value="hsl(150, 45%, 82%)"></span>
-                            <span class="color" style="background-color: hsl(42, 90%, 60%);" data-name="yellow" data-value="hsl(42, 90%, 82%)"></span>
-                            <span class="color" style="background-color: hsl(211, 76%, 55%);" data-name="blue" data-value="hsl(211, 76%, 86%)"></span>
+                            <span class="color" tabindex="0" style="background-color: hsl(9, 100%, 64%);" data-name="orange" data-value="hsl(9, 100%, 86%)"></span>
+                            <span class="color" tabindex="1" style="background-color: hsl(257, 79%, 64%);" data-name="purple" data-value="hsl(257, 79%, 86%)"></span>
+                            <span class="color" tabindex="2" style="background-color: hsl(150, 45%, 54%);" data-name="green" data-value="hsl(150, 45%, 82%)"></span>
+                            <span class="color" tabindex="3" style="background-color: hsl(42, 90%, 60%);" data-name="yellow" data-value="hsl(42, 90%, 82%)"></span>
+                            <span class="color" tabindex="4" style="background-color: hsl(211, 76%, 55%);" data-name="blue" data-value="hsl(211, 76%, 86%)"></span>
                         </div>
                     </div>
 
